[package]
name = "hide_menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo-events = "0.1.1"
gloo-utils = "0.1.1"
wasm-bindgen = "0.2.71"
web-sys = {version="0.3.0",features=["HtmlElement","Window"]}